--- a/JavaScript-Parte2-Lenguaje-de-la-web-aula1/1747-JavaScript-parte2-aula1/css/index.css
+++ b/JavaScript-Parte2-Lenguaje-de-la-web-aula1/1747-JavaScript-parte2-aula1/css/index.css
@@ -140,3 +140,14 @@ button[disabled=disabled], button:disabled {
 #mensajes-error{
 	color: red;
 }
+
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
+
+#filtrar-tabla{
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
+}
